Remove legal links from footer & fix scrollbar hover color

--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -210,12 +210,14 @@ body {
         scrollbar-color: #1b314f #dcdcdc;
         --color-wrapper: #dcdcdc;
         --color: #1b314f;
+        --color-scrollbar-hover: #1b314f;
     }
     &.dark {
         background: #052040;
         scrollbar-color: #f7f7f7 #1b314f;
         --color-wrapper: #1b314f;
         --color: #f7f7f7;
+        --color-scrollbar-hover: #f7f7f7;
     }
 }
 
